Remove @supports query
We no longer use position: fixed as a fallback if sticky isn't
supported, so I'm not aware of any reason to keep the @supports
query around.

Additionally, we want the bottom margin to be present regardless of
whether sticky is supported or not.

--- a/src/govuk/components/exit-this-page/_index.scss
+++ b/src/govuk/components/exit-this-page/_index.scss
@@ -4,14 +4,12 @@
   $indicator-size: .75em;
 
   .govuk-exit-this-page {
+    @include govuk-responsive-margin(8, "bottom");
+    position: sticky;
     z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
-    @supports (position: sticky) {
-      @include govuk-responsive-padding(8, "bottom");
-      position: sticky;
-    }
 
     @include govuk-media-query($from: tablet) {
       display: inline-block;
