--- a/src/govuk/objects/_template.scss
+++ b/src/govuk/objects/_template.scss
@@ -12,6 +12,23 @@
     // would like the browser to stay on 100% text zoom by default.
     text-size-adjust: 100%;
 
+    // Add scroll padding to the top of govuk-template unless the exit this page
+    // component is present.
+    //
+    // This is a solution to exit this page potentially failing WCAG SC 2.4.12:
+    // Focus Not Obscured (https://www.w3.org/WAI/WCAG22/Understanding/focus-not-obscured-minimum.html)
+    // due to it's sticky positioning.
+    //
+    // This will apply scroll-padding-top in any browsers that don't support :has
+    // (https://caniuse.com/css-has)
+    @supports (position: sticky) {
+      scroll-padding-top: govuk-spacing(9);
+
+      &:not(:has(.govuk-exit-this-page)) {
+        scroll-padding-top: 0;
+      }
+    }
+
     // Force the scrollbar to always display in IE, to prevent horizontal page
     // jumps as content height changes (e.g. autocomplete results open).
     @include govuk-media-query($media-type: screen) {
