Update Government Equalities Office brand colour

--- a/src/govuk/settings/_colours-organisations.scss
+++ b/src/govuk/settings/_colours-organisations.scss
@@ -85,7 +85,8 @@ $govuk-colours-organisations: (
     colour-websafe: #406e97
   ),
   "government-equalities-office": (
-    colour:  #9325b2
+    colour: #005abb,
+    colour-websafe: #347da4
   ),
   "hm-government": (
     colour: #0076c0,
