Use letter spacing modifier for passport example

--- a/app/src/views/full-page-examples/passport-details/index.njk
+++ b/app/src/views/full-page-examples/passport-details/index.njk
@@ -49,7 +49,7 @@ scenario: >-
           hint: {
             text: "For example, 502135326"
           },
-          classes: "govuk-input--width-10",
+          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           id: "passport-number",
           name: "passport-number",
           value: values["passport-number"],
