Initial change to view and examples

--- a/app/src/views/full-page-examples/announcements/index.njk
+++ b/app/src/views/full-page-examples/announcements/index.njk
@@ -1,6 +1,8 @@
 ---
 scenario: You want to read this article about '2018’s oddest requests from Brits abroad'.
 notes: Based on https://www.gov.uk/government/news/strictly-vampires-and-sausages-2018s-oddest-requests-from-brits-abroad
+
+hidden: true
 ---
 {% extends "full-page-example.njk" %}
 
