--- a/app/src/views/full-page-examples/bank-holidays/index.njk
+++ b/app/src/views/full-page-examples/bank-holidays/index.njk
@@ -12,6 +12,8 @@ scenario: >-
 notes: >-
   This example is based on https://www.gov.uk/bank-holidays.
   The data is not 'live' and so the answer is unlikely to be correct.
+
+hidden: true
 ---
 {% extends "full-page-example.njk" %}
 
