--- a/app/src/views/full-page-examples/check-your-answers/index.njk
+++ b/app/src/views/full-page-examples/check-your-answers/index.njk
@@ -9,6 +9,8 @@ scenario: >-
   1. You would like to change your answer for one of the questions.
 
 notes: The links to change your answers are not functional.
+
+hidden: true
 ---
 
 {# This example is based of the  "Check your answers before sending your application" example: https://design-system.service.gov.uk/patterns/check-answers/default/index.html #}
