--- a/app/src/views/full-page-examples/cookie-banner-server-side/index.njk
+++ b/app/src/views/full-page-examples/cookie-banner-server-side/index.njk
@@ -14,6 +14,8 @@ notes: >-
   The choice to accept or reject cookies will not be remembered.
 
   The content of the page is not important for this scenario.
+
+hidden: true
 ---
 
 {# This example is based of the live "Apply online for a UK passport" start page: https://www.gov.uk/apply-renew-passport #}
