--- a/app/src/views/full-page-examples/feedback/index.njk
+++ b/app/src/views/full-page-examples/feedback/index.njk
@@ -18,6 +18,8 @@ scenario: >-
   3. Avoid answering the question “Do you want a reply?”
 
 notes: Based on https://www.signin.service.gov.uk/feedback
+
+hidden: true
 ---
 {% extends "full-page-example.njk" %}
 
