--- a/app/src/views/full-page-examples/have-you-changed-your-name/index.njk
+++ b/app/src/views/full-page-examples/have-you-changed-your-name/index.njk
@@ -8,6 +8,8 @@ scenario: >-
 
   1. Intentionally avoid answering the question before continuing to the next
       page.
+
+hidden: true
 ---
 
 {# This example is based of the "Radios" example: https://design-system.service.gov.uk/components/radios #}
