--- a/app/src/views/full-page-examples/how-do-you-want-to-sign-in/index.njk
+++ b/app/src/views/full-page-examples/how-do-you-want-to-sign-in/index.njk
@@ -8,6 +8,8 @@ scenario: >-
   1. Intentionally avoid answering the question before continuing to the next page.
 
 notes: Based on https://www.gov.uk/log-in-file-self-assessment-tax-return/sign-in/prove-identity
+
+hidden: true
 ---
 
 {% extends "full-page-example.njk" %}
