--- a/app/src/views/full-page-examples/passport-details/index.njk
+++ b/app/src/views/full-page-examples/passport-details/index.njk
@@ -8,6 +8,8 @@ scenario: >-
   1. Intentionally avoid answering the questions before continuing to the next page.
 
   2. Intentionally only fill in the day (and not month or year) of the expiry date.
+
+hidden: true
 ---
 
 {# This example is based of the "Passport details" pattern: https://design-system.service.gov.uk/patterns/question-pages/ #}
