--- a/app/src/views/full-page-examples/renew-driving-licence/index.njk
+++ b/app/src/views/full-page-examples/renew-driving-licence/index.njk
@@ -4,6 +4,8 @@ notes: >-
   The buttons and links on this page are not functional. This example shows
   GOV.UK Frontend used alongside our 'legacy' frontend frameworks.
   The links and buttons on this page have known accessibility issues.
+
+hidden: true
 ---
 
 {# This example is based on the "Renew driving licence"
