--- a/app/src/views/full-page-examples/search/index.njk
+++ b/app/src/views/full-page-examples/search/index.njk
@@ -16,6 +16,8 @@ notes: >-
   of the sort of interactions that you would find on a search page.
 
   This example merges features seen on GOV.UK news and communication finders and search pages.
+
+hidden: true
 ---
 
 {% extends "full-page-example.njk" %}
