--- a/app/src/views/full-page-examples/service-manual-topic/index.njk
+++ b/app/src/views/full-page-examples/service-manual-topic/index.njk
@@ -5,6 +5,8 @@ scenario: >-
   more about software development processes.
 
 notes: The links within each section are not functional.
+
+hidden: true
 ---
 
 {# This example is based of the live "Service Manual - Technology" page: https://www.gov.uk/service-manual/technology #}
