--- a/app/src/views/full-page-examples/update-your-account-details/index.njk
+++ b/app/src/views/full-page-examples/update-your-account-details/index.njk
@@ -6,6 +6,8 @@ scenario: >-
   Things to try:
 
   1. Intentionally avoid answering the questions before continuing to the next page.
+
+hidden: true
 ---
 
 {% extends "full-page-example.njk" %}
