--- a/app/src/views/full-page-examples/upload-your-photo-success/index.njk
+++ b/app/src/views/full-page-examples/upload-your-photo-success/index.njk
@@ -3,6 +3,8 @@ scenario: >-
   As part of an online service, you are asked to upload your photo.
 
   The upload will always result in a success (alert) message that uses the notification banner.
+
+hidden: true
 ---
 
 {# This example is based of the live "Passport" service: https://www.passport.service.gov.uk/photo/upload #}
