--- a/app/src/views/full-page-examples/upload-your-photo/index.njk
+++ b/app/src/views/full-page-examples/upload-your-photo/index.njk
@@ -6,6 +6,8 @@ scenario: >-
   Things to try:
 
   1. Intentionally avoid uploading a file and accepting terms and conditions before continuing to the next page.
+
+hidden: true
 ---
 
 {# This example is based of the live "Passport" service: https://www.passport.service.gov.uk/photo/upload #}
