--- a/app/src/views/full-page-examples/what-is-your-nationality/index.njk
+++ b/app/src/views/full-page-examples/what-is-your-nationality/index.njk
@@ -16,6 +16,9 @@ scenario: >-
       provide a reason why you cannot provide your nationality.
 
   5. Intentionally submit the form without selecting any of the options
+
+hidden: true
+
 ---
 
 {# This example is based of the  "What is your nationality?" example: https://www.registertovote.service.gov.uk/register-to-vote/nationality #}
