--- a/app/src/views/full-page-examples/what-was-the-last-country-you-visited/index.njk
+++ b/app/src/views/full-page-examples/what-was-the-last-country-you-visited/index.njk
@@ -6,6 +6,8 @@ scenario: >-
   Things to try:
 
   1. Intentionally avoid answering the question before continuing to the next page.
+
+hidden: true
 ---
 
 {# This example is based of the  "What is your home postcode?" example: https://design-system.service.gov.uk/patterns/question-pages/postcode/index.html #}
