--- a/app/src/views/full-page-examples/applicant-details/index.njk
+++ b/app/src/views/full-page-examples/applicant-details/index.njk
@@ -6,6 +6,8 @@ notes: >-
   This example shows GOV.UK Frontend used alongside our 'legacy' frontend
   frameworks. The full name field, and links within the header and footer have
   known accessibility issues.
+
+hidden: true
 ---
 
 {% extends "full-page-example-legacy.njk" %}
