--- a/app/src/views/full-page-examples/cookie-banner-essential-cookies/index.njk
+++ b/app/src/views/full-page-examples/cookie-banner-essential-cookies/index.njk
@@ -10,6 +10,8 @@ notes: >-
   The choice to hide the banner on subsequent visits will not be remembered.
 
   The content of the page is not important for this scenario.
+
+hidden: true
 ---
 
 {# This example is based of the live "Apply online for a UK passport" start page: https://www.gov.uk/apply-renew-passport #}
