Split preview layout `full-width` into `full-width-landmarks`
Allows the header/footer to pass landmark tests without the `main` wrapper

--- a/app/src/views/all-components.njk
+++ b/app/src/views/all-components.njk
@@ -1,4 +1,4 @@
-{% extends "full-width.njk" %}
+{% extends "full-width-landmarks.njk" %}
 
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "macros/showExamples.njk" import showExamples %}
