--- a/app/src/views/component.njk
+++ b/app/src/views/component.njk
@@ -1,7 +1,7 @@
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "macros/showExamples.njk" import showExamples %}
 
-{% extends "full-width.njk" %}
+{% extends "full-width-landmarks.njk" %}
 
 {% set bodyClasses %}
   language-markup
