--- a/app/src/views/examples/footer-alignment/index.njk
+++ b/app/src/views/examples/footer-alignment/index.njk
@@ -1,7 +1,7 @@
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "footer/macro.njk" import govukFooter %}
 
-{% extends "full-width.njk" %}
+{% extends "full-width-landmarks.njk" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
