--- a/app/src/views/layouts/full-width-landmarks.njk
+++ b/app/src/views/layouts/full-width-landmarks.njk
@@ -4,5 +4,7 @@
   <div class="govuk-width-container">
     {% block beforeContent %}{% endblock %}
   </div>
-  {% block content %}{% endblock %}
+  <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main">
+    {% block content %}{% endblock %}
+  </main>
 {% endblock %}
