Update review app to “Simplify Sass import paths”
See docs: https://frontend.design-system.service.gov.uk/importing-css-assets-and-javascript/#simplify-sass-import-paths

--- a/app/src/stylesheets/app.scss
+++ b/app/src/stylesheets/app.scss
@@ -1,7 +1,7 @@
 $govuk-show-breakpoints: true;
 $govuk-new-link-styles: true;
 
-@import "../../../package/src/govuk/all";
+@import "govuk/all";
 @import "partials/app";
 @import "partials/code";
 @import "partials/banner";
