--- a/app/src/stylesheets/full-page-examples/campaign-page.scss
+++ b/app/src/stylesheets/full-page-examples/campaign-page.scss
@@ -1,6 +1,6 @@
-@import "../../../../package/src/govuk/base";
+@import "govuk/base";
 $govuk-new-link-styles: true;
-@import "../../../../package/src/govuk/core/all";
+@import "govuk/core/all";
 
 .app-header--campaign {
   padding-bottom: govuk-spacing(2);
