--- a/app/src/stylesheets/full-page-examples/search.scss
+++ b/app/src/stylesheets/full-page-examples/search.scss
@@ -1,6 +1,6 @@
-@import "../../../../package/src/govuk/base";
+@import "govuk/base";
 $govuk-new-link-styles: true;
-@import "../../../../package/src/govuk/core/all";
+@import "govuk/core/all";
 
 .app-document-list > li {
   padding-top: govuk-spacing(4);
