Add prefix/suffix and accordion examples

--- a/app/src/views/full-page-examples/index.njk
+++ b/app/src/views/full-page-examples/index.njk
@@ -64,7 +64,11 @@
 
     <p class="govuk-body govuk-!-font-size-16">The account will be confirmed using a mobile telephone.</p>
 
-    <h3 class="govuk-heading-m"><a href="https://design-system.service.gov.uk/patterns/cookies-page/" class="govuk-link">GOV.UK Design System cookie page</a></h3>
+    <h3 class="govuk-heading-m"><a href="https://design-system.service.gov.uk/cookies/" class="govuk-link">GOV.UK Design System cookie page</a></h3>
+
+    <div class="app-prose-scope"><p>The GOV.UK Design system is an example of how our cookie page pattern can be implmented in a service.</p></div>
+
+    <p class="govuk-body govuk-!-font-size-16">We need the cookie settings to be changed or set in order to audit how we notify our users of the change.</p>
 
     <h3 class="govuk-heading-m"><a href="https://govuk-formats.herokuapp.com/document-types/step-by-step-nav" class="govuk-link">Step-by-step navigation example</a></h3>
 
