Clean up other IE8-specific Sass code
Clean up some other code which wasn't specifically scoped to IE8, but where the code structure had been altered to accommodate IE8.

--- a/packages/govuk-frontend/src/govuk/helpers/_links.scss
+++ b/packages/govuk-frontend/src/govuk/helpers/_links.scss
@@ -383,8 +383,7 @@
 /// Remove underline from links
 ///
 /// Remove underlines from links unless the link is active or a user hovers
-/// their cursor over it. This has no effect in Internet Explorer 8 (IE8),
-/// because IE8 does not support `:not`.
+/// their cursor over it.
 ///
 /// @example scss
 ///   .govuk-component__link {
