changes to content on the full examples pages

--- a/app/src/views/full-page-examples/child-maintenance/index.njk
+++ b/app/src/views/full-page-examples/child-maintenance/index.njk
@@ -1,21 +1,18 @@
 ---
 scenario: >-
-  You are a user looking for information on child maintenance.
-  There is a chance that as a user of this service, you are a victim of domestic
-  abuse, therefore this page includes an Exit this Page component.
+  This page includes an Exit this Page component. Things to try:
 
-  Things to try:
+  1. Activate the Exit this Page button using your keyboard, mouse or trackpad.
 
-  1. Activate the Exit this Page button by clicking it
+  2. Click the Esc key on your keyboard 3 times to use the 'Exit this page' button.
 
-  2. Activate the Exit this Page button by pressing the Esc key 3 times
+  3. Activating the Exit this Page button on a small screen view.
 
-  3. Activating the Exit this Page button on a small screen view
+  4. Scroll down the page to see if the Exit this Page button remains sticky.
 
-  4. Scoll down the page to see if the Exit this Page button remains sticky
+  5. Tabbing through the page to find the Exit this Page "skip link" at the top of the accessibility tree.
 
-  5. Tabbing through the page to find the Exit this Page "skip link" at the top
-  of the accessibility tree
+notes: The Exit this Page button and skip link are the only navigational elements you need to interact with as part of this example.
 ---
 
 {% extends "full-page-example.njk" %}
