--- a/app/src/views/full-page-examples/cookie-banner-client-side/index.njk
+++ b/app/src/views/full-page-examples/cookie-banner-client-side/index.njk
@@ -1,17 +1,14 @@
 ---
 name: Cookie banner (client side)
 scenario: >-
-  You need to make a choice about whether to accept cookies or not.
+  This page includes a Cookie banner component. Things to try:
+
+  1. Make a choice about whether to accept cookies or not.
 
 notes: >-
-  For this example, when the user makes a choice to accept or reject cookies
-  their preference is handled entirely on the client side with no page
-  navigation, and JavaScript is used to swap out the cookie banner for the
-  'confirmation' banner.
-
-  The choice to accept or reject cookies will not be remembered.
-
-  The content of the page is not important for this scenario.
+  For this example, when the user makes a choice to accept or reject cookies their preference is handled with no page navigation. JavaScript is used to swap out the cookie banner for the 'confirmation' banner. 
+  
+  The choice to accept or reject cookies will not be remembered. 
 ---
 
 {# This example is based of the live "Apply online for a UK passport" start page: https://www.gov.uk/apply-renew-passport #}
