--- a/app/src/views/full-page-examples/cookie-banner-server-side/index.njk
+++ b/app/src/views/full-page-examples/cookie-banner-server-side/index.njk
@@ -1,19 +1,14 @@
 ---
 name: Cookie banner (server side with progressive enhancement)
 scenario: >-
-  You need to make a choice about whether to accept cookies or not.
+  This page includes a Cookie banner component. Things to try:
+
+  1. Make a choice about whether to accept cookies or not.
 
 notes: >-
-  For this example, when the user makes a choice to accept or reject cookies the
-  form is submitted and a page navigation occurs, with the confirmation banner
-  shown on the next page.
-
-  If the user chooses hides the confirmation banner, we progressively enhance the cookie banner to
-  hide with JavaScript. If JavaScript is not enabled, the page reloads.
+  For this example, when the user makes a choice to accept or reject cookies the form is submitted and a page navigation occurs, with the confirmation banner shown on the next page.
 
   The choice to accept or reject cookies will not be remembered.
-
-  The content of the page is not important for this scenario.
 
 ---
 
