--- a/app/src/views/full-page-examples/make-a-payment/index.njk
+++ b/app/src/views/full-page-examples/make-a-payment/index.njk
@@ -1,6 +1,9 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to make a payment.
+  Things to try:
+  
+  1. Enter a value and select ‘Continue’.
+
 ---
 
 {# This example is based of the  prefix/suffix example: https://design-system.service.gov.uk/components/text-input/input-prefix-suffix/index.html #}
