--- a/app/src/views/full-page-examples/search-three-pages/index.njk
+++ b/app/src/views/full-page-examples/search-three-pages/index.njk
@@ -1,21 +1,13 @@
 ---
 scenario: >-
-  You would like to find relevant articles by sorting the results and filtering
-  by the organisation(s) that published the articles.
+  This example shows a search for “driving” with three pages of results. Things to try:
 
+  1. See which page number the displayed search results are on.
 
-  Things to try:
-
-  1. Sort the list of results so that the oldest results are first.
-
-  2. Filter the list of results to show only those published by the Ministry of
-      Defence.
+  2. Select a ‘Topic’ or ‘Organisation’.
 
 notes: >-
-  The filtering and sorting may not be accurate – this is just a demonstration
-  of the sort of interactions that you would find on a search page.
-
-  This example merges features seen on GOV.UK news and communication finders and search pages.
+  The filtering and sorting is not intended to work – this is a demonstration of the sort of interactive components you would find on a search page. This example is the same as search but with a different pagination treatment.
 ---
 
 {% extends "full-page-example.njk" %}
