--- a/app/src/views/full-page-examples/service-manual-topic/index.njk
+++ b/app/src/views/full-page-examples/service-manual-topic/index.njk
@@ -1,8 +1,9 @@
 ---
 name: Topic page (Service Manual)
 scenario: >-
-  You would like to access information on a given topic, perhaps by finding out
-  more about software development processes.
+  This example provides detailed information on a given topic. Things to try:
+
+  1. Find out more about software development processes.
 
 notes: The links within each section are not functional.
 
