--- a/app/src/views/full-page-examples/start-page/index.njk
+++ b/app/src/views/full-page-examples/start-page/index.njk
@@ -1,11 +1,10 @@
 ---
 scenario: >-
-  You want to apply for a passport.
-
-
   Things to try:
 
-  1. Find out other ways to apply
+  1. Find out other ways to apply for a passport.
+
+  2. Identify how you can access the service home.
 
 notes: The buttons and links on this page are not functional.
 ---
