--- a/app/src/views/full-page-examples/task-list/index.njk
+++ b/app/src/views/full-page-examples/task-list/index.njk
@@ -1,8 +1,12 @@
 ---
 scenario: >-
-  A service with a series of tasks that need to be completed.
+  This service has a series of tasks you need to complete. Things to try:
 
-notes: The links to change your answers are not functional.
+  1. Activate the menu items on a small screen view.
+  
+  2. Navigate to any tasks you cannot complete yet.
+
+notes: The links that would normally change your answers are not functional in the example page.
 ---
 
 {# This example is based of the community contribution to create a Task list component and replace "Task list pages" example: https://design-system.service.gov.uk/patterns/task-list-pages/ #}
