--- a/app/src/views/full-page-examples/upload-your-photo-success/index.njk
+++ b/app/src/views/full-page-examples/upload-your-photo-success/index.njk
@@ -1,9 +1,12 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to upload your photo.
+  As part of an online service, you are asked to upload your photo. Things to try:
 
-  The upload will always result in a success (alert) message that uses the notification banner.
+  1. Upload a file using the file upload button.
 
+  2. Drag a file into the file upload area.
+
+notes: The upload will always result in a success (alert) message. Any files uploaded will not be stored.
 ---
 
 {# This example is based of the live "Passport" service: https://www.passport.service.gov.uk/photo/upload #}
