--- a/app/src/views/full-page-examples/what-is-your-national-insurance-number/index.njk
+++ b/app/src/views/full-page-examples/what-is-your-national-insurance-number/index.njk
@@ -1,11 +1,8 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to provide your national insurance number.
+  As part of an online service, you are asked to provide your national insurance number. Things to try:
 
-
-  Prompts:
-
-  1. Do not answer the question
+  1. Do not answer the question before continuing to the next page.
 
 ---
 
