--- a/app/src/views/full-page-examples/what-is-your-phone-number/index.njk
+++ b/app/src/views/full-page-examples/what-is-your-phone-number/index.njk
@@ -1,11 +1,8 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to provide your phone number.
+  As part of an online service, you are asked to provide your phone number. Things to try:
 
-
-  Prompts:
-
-  1. Do not answer the question
+  1. Do not answer the question before continuing to the next page.
 ---
 
 {# This example is based of the  "What is your telephone number?" example: https://design-system.service.gov.uk/patterns/telephone-numbers/international/index.html #}
