--- a/app/src/views/full-page-examples/will-you-be-travelling-to-any-of-these-countries/index.njk
+++ b/app/src/views/full-page-examples/will-you-be-travelling-to-any-of-these-countries/index.njk
@@ -1,11 +1,10 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to provide the last country you visited.
+  As part of an online service, you are asked to provide the last country you visited. Things to try:
 
-
-  Things to try:
-
-  1. Intentionally avoid answering the question before continuing to the next page.
+  1. Select the answer to the question, “No, I will not be travelling to any of these countries”.
+  
+  2. Intentionally avoid answering the question before continuing to the next page.
 ---
 
 {% extends "full-page-example.njk" %}
