--- a/app/src/views/full-page-examples/work-history/index.njk
+++ b/app/src/views/full-page-examples/work-history/index.njk
@@ -1,13 +1,11 @@
 ---
 scenario: >-
-  As part of an online service, you are providing information about previous jobs
-  in the form of multiple job records. You are provided a page to check the records
-  you've entered so far, add more or continue with the service.
-
-  Things to try:
+  As part of an online service, you are provided a page to check the records you've previously entered, add more or continue with the service. Things to try:
 
   1. You would like to change your answer for one of the questions for one of the records.
+  
   2. You would like to delete a record
+
   3. You would like to add a new record
 
 notes: The links to change your answers are not functional.
