--- a/app/src/views/full-page-examples/feedback/index.njk
+++ b/app/src/views/full-page-examples/feedback/index.njk
@@ -1,23 +1,10 @@
 ---
 scenario: >-
-  You have used a service called GOV.UK Verify and wish to report an issue.
-
-
   Things to try:
 
   1. Intentionally put too much content in the feedback box.
 
-    “What were you trying to do” question has a limit of 100 characters.
-
-    “Please provide details of your question, problem or feedback” has a limit
-    of 300 characters.
-
-  2. Say that you want a reply, but avoid filling in the details of how you
-      would like to be contacted.
-
-  3. Avoid answering the question “Do you want a reply?”
-
-notes: Based on https://www.signin.service.gov.uk/feedback
+  2. Answer the question “Do you want a reply?” with “Yes”.
 
 ---
 {% extends "full-page-example.njk" %}
