--- a/app/src/views/full-page-examples/what-are-your-bank-details/index.njk
+++ b/app/src/views/full-page-examples/what-are-your-bank-details/index.njk
@@ -1,12 +1,10 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to provide your bank details.
+  As part of an online service, you are asked to provide your bank details. Things to try:
 
+  1. Enter some made up information into some or all of the fields before continuing to the next page.
 
-  Things to try:
-
-  1. Intentionally avoid answering the questions before continuing to the next
-      page.
+  2. Enter no information at all before continuing to the next page.
 ---
 
 {# This example is based of the  "What is your home address?" example: https://design-system.service.gov.uk/patterns/addresses/multiple/index.html #}
