--- a/app/src/views/full-page-examples/what-is-your-date-of-birth/index.njk
+++ b/app/src/views/full-page-examples/what-is-your-date-of-birth/index.njk
@@ -1,11 +1,10 @@
 ---
 scenario: >-
-  As part of an online service, you are asked to provide your date of birth.
+  As part of an online service, you are asked to provide your date of birth. Things to try:
 
+  1. Enter a made up date before continuing to the next page.
 
-  Prompts:
-
-  1. Do not answer the question
+notes: There are no error states for this example.
 
 ---
 
@@ -47,7 +46,6 @@ scenario: >-
           classes: "govuk-fieldset__legend--l"
         }
       },
-      errorMessage: errors["date-of-birth"],
       hint: {
         text: "For example, 31 3 1980. If you prefer not to say, continue without entering any information."
       },
