--- a/app/src/views/index.njk
+++ b/app/src/views/index.njk
@@ -21,11 +21,11 @@
       <h2 class="govuk-heading-m">Other examples</h2>
 
       <div class="govuk-list">
-        <li><a href="https://alphagov.github.io/accessible-autocomplete/examples/" class="govuk-link">Accessible autocomplete example</a></li>
+        <li><a href="https://alphagov.github.io/accessible-autocomplete/examples/form.html" class="govuk-link">Accessible autocomplete example</a></li>
         <li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/income-tax-enquiries-for-individuals-pensioners-and-employees" class="govuk-link">Contact a department or service team example</a></li>
         <li><a href="http://gov.uk/account" class="govuk-link">GOV.UK Account</a></li>
         <li><a href="https://design-system.service.gov.uk/cookies/" class="govuk-link">GOV.UK Design System cookie page</a></li>
-        <li><a href="https://govuk-formats.herokuapp.com/document-types/step-by-step-nav" class="govuk-link">Step-by-step navigation example</a></li>
+        <li><a href="https://www.gov.uk/visit-uk-business-trip" class="govuk-link">Step-by-step navigation example</a></li>
       </div>
 
     </div>
